--- a/views/layout.jade
+++ b/views/layout.jade
@@ -26,6 +26,8 @@ html
                         li(class=(title === 'Contact' ? 'active' : ''))
                             a(href='/contact') Contact
     block content
+    footer
+        p &copy; 2015, All Rights Reserved.
 
     script( src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js' )
     script( src='/javascripts/bootstrap.js' )
